--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+.Red-color{
+  color: red;
+}
+
+.FormContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.FormLabel{
+  font-weight: bold;
+  margin: auto;
+  margin-bottom: 2px;
+}
+
+.FormElement{
+  width: 400px;
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+.FormButton{
+  margin: auto;
+  min-width: 150px;
+  margin-top: 10px;
+}
+
+
